--- a/package.json
+++ b/package.json
@@ -7,10 +7,15 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "font-awesome": "^4.7.0",
+    "id": "^0.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "^5.0.0",
+    "redux": "^4.1.2",
+    "redux-devtools-extension": "2.13.9",
     "sass": "^1.49.9",
+    "short": "^2.6.0",
+    "shortid": "^2.2.16",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
