--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "id": "^0.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "6.0.1",
     "react-scripts": "^5.0.0",
-    "redux": "^4.1.2",
+    "redux": "^4.2.0",
     "redux-devtools-extension": "2.13.9",
     "sass": "^1.49.9",
     "short": "^2.6.0",
